@@ -4,6 +4,7 @@
 * Fixed tesseract 3.00 support
 * Fixed bug sending PDF as email
   Closes bug 152 (No eMail gscan2pdf 1.1 Suse 12.2)
+* Don't need to convert image to .bmp for cuneiform 1.1.0
 
 
 1.1.0 (18.11.2012):
